--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_first"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".FirstActivity"
-    >
+    tools:context="com.xyz.activityswitcher.SecondActivity"
+    android:background="#fff905">
+
 
     <TextView
-        android:text="@string/title_activity_first"
+        android:text="Second Acivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="36sp"
-        android:id="@+id/lblFirstActivity"
+        android:id="@+id/lblSecondActivity"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         />
@@ -24,28 +25,28 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Goto Second Activity"
+        android:text="Goto First Activity"
         android:textSize="18sp"
-        android:id="@+id/BTNFirstActivity"
-        android:layout_below="@+id/lblFirstActivity"
+        android:id="@+id/BTNsecondActivity"
+        android:layout_below="@+id/lblSecondActivity"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="23dp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Data sent from second:"
-        android:id="@+id/lblDataFromSecondActivity"
+        android:text="Data sent from First activity:"
+        android:id="@+id/lblDataFromFirstActivity"
         android:textSize="24sp"
         android:layout_marginTop="133dp"
-        android:layout_below="@+id/BTNFirstActivity"
+        android:layout_below="@+id/BTNsecondActivity"
         android:layout_centerHorizontal="true"
         />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/DatafromSecondActivity"
+        android:id="@+id/DatafromFirstActivity"
         android:layout_below="@+id/lblDataFromSecondActivity"
         android:layout_marginTop="32dp"
         android:textAlignment="center"
@@ -55,8 +56,8 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/editTextFirst"
-        android:layout_below="@+id/BTNFirstActivity"
+        android:id="@+id/editTextSecond"
+        android:layout_below="@+id/BTNsecondActivity"
         android:layout_marginTop="33dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
@@ -64,4 +65,5 @@
         android:layout_alignParentStart="true"
         android:background="#ffffff"
         android:textSize="35sp" />
+
 </RelativeLayout>
